feat: add new questions to AWS, Node.js, Docker, and Python docs
Add 20 new questions to AWS questions document covering advanced topics like AWS WAF rate limiting and Aurora scaling. Add 20 new Node.js questions covering cluster module and performance optimization. Add 20 new Docker questions covering multi-host networking and security scanning. Add 20 new Python questions covering Celery, SQLAlchemy and type safety.

Each question includes difficulty level, implementation strategy, and code examples where applicable. Questions are organized by topic and include back-to-top links for navigation.